@startuml
title Camera Rental Management Database

entity admins {
  * id : bigint
  --
  name : varchar
  email : varchar
  password : varchar
  role : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity admin_sessions {
  * id : bigint
  --
  admin_id : bigint
  token : varchar
  ip_address : varchar
  user_agent : text
  expires_at : timestamp
  created_at : timestamp
}

entity customers {
  * id : bigint
  --
  name : varchar
  phone : varchar
  address : text
  identity_type : varchar
  identity_number : varchar
  identity_image : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity categories {
  * id : bigint
  --
  name : varchar
  description : text
  created_at : timestamp
  updated_at : timestamp
}

entity category_details {
  * id : bigint
  --
  category_id : bigint
  name : varchar
  description : text
  created_at : timestamp
  updated_at : timestamp
}

entity items {
  * id : bigint
  --
  category_id : bigint
  category_detail_id : bigint
  name : varchar
  brand : varchar
  model : varchar
  serial_number : varchar
  description : text
  daily_price : decimal
  stock : int
  image : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity item_statuses {
  * id : bigint
  --
  item_id : bigint
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity payment_methods {
  * id : bigint
  --
  name : varchar
  type : varchar
  content_type : varchar
  content_value : text
  image_upload : varchar
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity rentals {
  * id : bigint
  --
  customer_id : bigint
  admin_id : bigint
  rental_code : varchar
  rental_date : date
  planned_return_date : date
  actual_return_date : date
  total_price : decimal
  status : varchar
  note : text
  created_at : timestamp
  updated_at : timestamp
}

entity rental_details {
  * id : bigint
  --
  rental_id : bigint
  item_status_id : bigint
  daily_price : decimal
  quantity : int
  subtotal : decimal
  created_at : timestamp
  updated_at : timestamp
}

entity rental_payments {
  * id : bigint
  --
  rental_id : bigint
  payment_method_id : bigint
  payment_code : varchar
  amount : decimal
  payment_date : timestamp
  status : varchar
  proof_image : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity returns {
  * id : bigint
  --
  rental_id : bigint
  admin_id : bigint
  return_date : date
  condition_note : text
  has_penalty : boolean
  penalty_payment_method_id : bigint
  created_at : timestamp
  updated_at : timestamp
}

entity penalties {
  * id : bigint
  --
  return_id : bigint
  penalty_type : varchar
  description : text
  amount : decimal
  status : varchar
  paid_at : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity item_maintenance {
  * id : bigint
  --
  item_status_id : bigint
  admin_id : bigint
  title : varchar
  description : text
  maintenance_date : date
  cost : decimal
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

admins ||--o{ admin_sessions : has
admins ||--o{ rentals : processes
admins ||--o{ returns : receives
admins ||--o{ item_maintenance : records

customers ||--o{ rentals : makes

categories ||--o{ category_details : has
categories ||--o{ items : groups
category_details ||--o{ items : classifies

rentals ||--o{ rental_details : has
items ||--o{ item_statuses : has_units
item_statuses ||--o{ rental_details : rented_in

rentals ||--o{ rental_payments : paid_by
payment_methods ||--o{ rental_payments : used_by

rentals ||--o| returns : returned_as
returns ||--o| penalties : has
payment_methods ||--o{ returns : used_for_penalty

item_statuses ||--o{ item_maintenance : maintained_in

@enduml
